# ONNXim

./: =  CMakeLists.txt  README.md  dramsim3_output_epoch.json  out.txt
configs/: systolic_ws_8x8_c4_booksim2_DRAMsim.json  systolic_ws_8x8_c4_booksim2_ramulator2.json
configs/3d-ice_configs/: core_die.flp  core_temps.txt  hbm_die.flp  hbm_temps.txt  onnxim_npu.stk
configs/DRAMsim3_configs/: HBM_4Gb_x128.ini
configs/DSENT_configs/: electrical-clos.cfg  electrical-mesh.cfg  example.cfg  photonic-clos.cfg  photonic-link.cfg  router.cfg
configs/booksim2_configs/: fly_c64_m16.icnt
src/: CMakeLists.txt  Common.cc  DSENTWrapper.h  Dram.cc  Dram.h  SimulationConfig.h  Simulator.cc  Simulator.h  ThreeDICEWrapper.cc  ThreeDICEWrapper.h
